# coverai

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260502_0001_create_mvp_schema.py  20260502_0002_add_resume_profile_title.py  20260503_0003_add_api_auth_credits_promos.py  20260509_0004_add_welcome_bonus_credit_type.py  20260510_0005_complete_bdd_contract_schema.py
docker/: Dockerfile
docker/grafana/dashboards/: coverai-mvp.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/prometheus/: prometheus.yml
docs/: bdd-specification.md  business-plan.md  cover-letter-bot-architecture.md
src/coverai/: __init__.py  main.py
src/coverai/api/: __init__.py  app.py  bootstrap.py  lifespan.py
src/coverai/api/dependencies/: auth.py  services.py  session.py
src/coverai/api/helpers/: __init__.py  email.py  ids.py  payments.py  promo.py  users.py
src/coverai/api/mappers/: __init__.py  auth.py  generations.py  payments.py  profile.py  users.py
src/coverai/api/routes/: __init__.py  admin.py  analytics.py  auth.py  billing.py  generations.py  payments.py  profile.py  promocodes.py  subscriptions.py  system.py  users.py
src/coverai/api/schemas/: __init__.py
src/coverai/bot/: __init__.py  messages.py  protocols.py  router.py  runtime.py
src/coverai/bot/formatters/: __init__.py  credits.py  history.py  plan.py  profile.py
src/coverai/bot/handlers/: __init__.py  billing.py  document.py  generation.py  history.py  plan.py  profile.py  start.py  text.py  tone_callback.py
src/coverai/bot/helpers/: __init__.py  ids.py  users.py
src/coverai/bot/keyboards/: __init__.py  main_menu.py  tone.py
src/coverai/bot/parsing/: __init__.py  callback.py  history.py
src/coverai/bot/state/: __init__.py  pending_tone_store.py
src/coverai/clients/: __init__.py  hh.py  llm.py  openrouter.py  telegram.py
src/coverai/composition/: bot_runtime.py  worker_generation.py
src/coverai/configs/: __init__.py  admin.py  app.py  auth.py  base.py  billing.py  database.py  hh.py  llm.py  metrics.py  redis.py  settings.py  telegram.py
src/coverai/di/: __init__.py  container.py
src/coverai/di/providers/: __init__.py  queue_provider.py  repository_provider.py  service_provider.py  session_provider.py  settings_provider.py
src/coverai/domain/: __init__.py  credit_ledger_repo.py  credit_transaction.py  entities.py  enums.py  generation_job_queue.py  hh.py  llm.py  payments.py  promocodes.py  read_models.py  user_registration_repo.py
src/coverai/domain/ports/: __init__.py  cover_letter_repo.py  generation_request_repo.py  hh_client.py  llm_client.py  metrics_recorder.py  payment_repo.py  promo_code_repo.py  read_repos.py  resume_profile_repo.py  subscription_payment_repo.py  subscription_repo.py  telegram_sender.py  user_repo.py  vacancy_repo.py
src/coverai/infra/: __init__.py  arq_generation_job_queue.py  logging.py
src/coverai/infra/db/: __init__.py  models.py  session.py
src/coverai/infra/metrics/: __init__.py  billing_metrics.py  generation_metrics.py  llm_metrics.py  recorder.py  runtime_metrics.py  server.py
src/coverai/repos/: __init__.py  credit_ledger_sqlalchemy.py
src/coverai/repos/sqlalchemy/: __init__.py  cover_letter_repo.py  generation_request_repo.py  payment_repo.py  promo_code_repo.py  read_repos.py  resume_profile_repo.py  subscription_payment_repo.py  subscription_repo.py  user_repo.py  vacancy_repo.py
src/coverai/services/: __init__.py  base_error.py  config.py
src/coverai/services/auth/: __init__.py  errors.py  models.py  password.py  protocols.py  token_service.py
src/coverai/services/billing/: __init__.py  admin_service.py  billing_service.py  errors.py  models.py  payment_service.py  plan_policy.py  promo_service.py  quota_service.py  (+1 more)
src/coverai/workers/: priority.py  settings.py  tasks.py
tests/fakes/: __init__.py  clients.py  factories.py  repos.py
tests/integration/: test_alembic_migration.py  test_api_app.py  test_sqlalchemy_repos.py  test_worker_tasks.py
tests/unit/: test_architecture_imports.py  test_billing_quota_services.py  test_bot_handlers.py  test_bot_runtime.py  test_cover_letter_service.py  test_db_schema.py  test_fake_repos.py  test_generation_queue_service.py  test_hh_client.py  test_hh_url_parser.py  test_history_service.py  test_llm_client.py  test_logging.py  test_metrics.py  test_payment_service.py  test_promo_service.py  test_promocode_routes.py  test_resume_extractors.py  test_scaffold.py  test_user_profile_services.py  test_user_registration_service.py  test_vacancy_service.py
(+71 files in other folders)
